[ FEAT ] : Style Server side sheet

--- a/public/locales/ko/main.json
+++ b/public/locales/ko/main.json
@@ -74,7 +74,8 @@
             "- 프로토 타입 버전 Front-End 개발",
             "- Languages : Javascript",
             "- Frameworks : React.js, Express.js"
-          ]
+          ],
+          "path": "/project/metu"
         }
       ]
     },
