--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -74,7 +74,8 @@
             "- Developed the front-end with a prototype version",
             "- Languages : Javascript",
             "- Frameworks : React.js, Express.js"
-          ]
+          ],
+          "path": "/project/metu"
         }
       ]
     },
